<resources>
    <string name="app_name">钻探助手</string>

    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="phone_num">手机号码</string>
    <string name="head">头像</string>
    <string name="phone_num_hint">请输入手机号码</string>
    <string name="pswd">密码</string>
    <string name="pswd_hint">请输入密码</string>
    <string name="forget_password_mark">忘记密码！</string>
    <string name="no_account">还没有账号，</string>
    <string name="register_immediately">立即注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="forget_pswd_phone_num_hint">请输入注册手机号</string>
    <string name="get_ver_code">获取验证码</string>
    <string name="ver_code">验证码</string>
    <string name="ver_code_hint">请输入验证码</string>
    <string name="new_pswd">新密码</string>
    <string name="forget_pswd_pswd_hint">请输入8-16位数的字母或数字密码</string>
    <string name="ensure_pswd_hint">再次输入密码</string>
    <string name="complete">完成</string>
    <string name="home">首页</string>
    <string name="buy_immediately">立即购买</string>
    <string name="video_part">视频区</string>
    <string name="parts">耗材/配件</string>
    <string name="parts_detail">商品详情</string>
    <string name="feedback">信息反馈</string>
    <string name="question_service">服务支持</string>
    <string name="send">发送</string>
    <string name="image">图片</string>
    <string name="my">个人中心</string>
    <string name="explain">使用说明</string>
    <string name="ask_knowledge">常见问题</string>
    <string name="ask_knowledge_detail">问答详情</string>
    <string name="feedback_histroy">历史反馈</string>
    <string name="name">姓名</string>
    <string name="register_name_hint">请输入您的真实姓名</string>
    <string name="company">单位</string>
    <string name="register_company_hint">请输入您的单位名称</string>
    <string name="commit">提交</string>
    <string name="delete">删除</string>
    <string name="contact_us">联系我们</string>
    <string name="about_egr">关于英格尔</string>
    <string name="share">分享</string>
    <string name="quit">退出</string>
    <string name="mall">商城</string>
    <string name="go_feedback">我要反馈</string>
    <string name="normal_question">常见问题</string>
    <string name="feedback_detail">问题详情</string>
    <string name="into_mall">进入商城</string>
    <string name="watch_more">查看更多</string>
    <string name="create_feedback_hint">请详细描述您遇到的问题</string>
    <string name="create_feedback_photo">拍摄/录像钻探照片</string>
    <string name="create_feedback_photo_below">帮助我们更快解决问题</string>
    <string name="wait_for_reply">待回复</string>
    <string name="replied">已回复</string>
    <string name="read_reply">查看回复</string>
    <string name="my_message">我的消息</string>
    <string name="sys_message">系统消息</string>
    <string name="phone_empty">手机号码不能为空</string>
    <string name="is_not_phone_num">请输入正确的手机号码</string>
    <string name="pswd_empty">请输入密码</string>
    <string name="pswd_too_short">密码长度不能小于8</string>
    <string name="logining">登录中……</string>
    <string name="registering">注册中……</string>
    <string name="name_empty">姓名不能为空</string>
    <string name="company_empty">单位不能为空</string>
    <string name="ver_code_empty">请输入验证码</string>
    <string name="waiting">请稍候……</string>
    <string name="commiting">提交中……</string>
    <string name="net_error">无法连接到服务器</string>
    <string name="register_success">注册成功</string>
    <string name="pswd_unlike">2次输入的密码不一致</string>
    <string name="reset_pswd_success">密码修改成功</string>
    <string name="sales_phone">销售电话</string>
    <string name="service_phone">客服电话</string>
    <string name="exit_app_pressback_again">再按一次退出程序</string>
    <string name="search_hint">请输入你要搜索的内容</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="no_data">没有数据</string>
    <string name="search">搜索</string>
    <string name="personal">个人信息</string>
    <string name="change_success">修改成功</string>
    <string name="commit_success">提交成功</string>
    <string name="ensure_quit_title">确定退出</string>
    <string name="ensure_quit_content">您确定要退出登录吗？</string>
    <string name="quit_login">退出登录</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="confirm_dialog_title_phone">拨打电话</string>
    <string name="confirm_dialog_content_phone">您确定拨打电话：</string>
    <string name="confirm_dialog_content_phone2">吗？</string>
    <string name="tag_email">邮箱：</string>
    <string name="tag_website">网址：</string>
    <string name="tag_tel">电话：</string>
    <string name="tag_address">地址：</string>
    <string name="share_to">分享到</string>
    <string name="weibo">微博</string>
    <string name="weixin">微信</string>
    <string name="QQ">QQ</string>
    <string name="Qzone">QQ空间</string>
    <string name="weixin_moments">朋友圈</string>
    <string name="number_limit_et_hint">还可以输入</string>
    <string name="number_limit_et_hint2">字</string>
    <string name="browser_title_default">正在努力加载中...</string>
    <string name="choose_img">图片选择</string>
    <string name="create_input_empty">请输入您遇到的问题</string>
    <string name="create_feedback_success_hint">后台已收到您的反馈，工作人员会尽快回复您。</string>
    <string name="create_feedback_success_hint2">根据您的反馈，我们给您匹配了相似的问题：</string>
    <string name="can_not_input_emoji">不支持输入表情符号</string>
    <string name="new_service_msg">有新回复</string>
    <string name="service_match_hint1">根据您的反馈，我们给您匹配了相似的问题：</string>
    <string name="service_match_hint2">以上回复是否解决了您的问题？</string>
    <string name="resolved"><u>已解决</u></string>
    <string name="unsolved"><u>未解决</u></string>
    <string name="service_match_empty_hint">根据您的反馈，未匹配到相似的问题，是否需要安排工作人员进行处理？</string>
    <string name="need"><u>需要</u></string>
    <string name="not_need"><u>不需要</u></string>
    <string name="not_need_hint">感谢您的反馈！</string>
    <string name="gallery">查看图片</string>
    <string name="home_explain">首页使用说明</string>
    <string name="home_know">首页常见问题</string>
    <string name="home_store">首页配件</string>
    <string name="home_video">视频区</string>
    <string name="home_service">服务支持</string>
    <string name="home_my">个人中心</string>
    <string name="parts_explain">配件目录</string>
    <string name="ver_code_send_suc">验证码已发送到您的手机，请注意查收</string>
    <string name="share_suc">分享成功</string>
    <string name="share_cancel">分享已取消</string>
    <string name="share_error">分享失败</string>
    <string name="choose_parts1">易损配件</string>
    <string name="choose_parts2">主机耗材</string>
    <string name="choose_parts3">钻探工具</string>
    <string name="choose_parts4">配方水泥</string>
    <string name="choose_parts5">液压配件</string>
    <string name="choose_parts6">发动机配件</string>
    <string name="parts_title">耗材配件</string>
    <string name="all">全部</string>
    <string name="back_home">返回首页</string>
    <string name="no_contact_phone">暂无客服联系方式</string>
    <string name="no_share_info">暂未获取到分享内容</string>
</resources>
