<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_primary"
    android:orientation="vertical">

    <include layout="@layout/line_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/line_divider" />

        <RelativeLayout
            android:id="@+id/rl_phoneNum"
            style="@style/EditTextRl">

            <TextView
                android:id="@+id/tv_phoneNum"
                style="@style/EditTextTv"
                android:text="@string/phone_num" />

            <EditText
                android:id="@+id/et_phoneNum"
                style="@style/EditTextEt"
                android:layout_width="160dp"
                android:layout_toRightOf="@id/tv_phoneNum"
                android:hint="@string/forget_pswd_phone_num_hint"
                android:inputType="number"
                android:maxLength="11" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/et_phoneNum"
                android:gravity="center">

                <com.egr.drillinghelper.ui.widgets.CountDownTimerButton
                    android:id="@+id/tv_get_ver_code"
                    style="@style/CountDownTimerBtn"
                    android:text="@string/get_ver_code" />
            </RelativeLayout>

        </RelativeLayout>

        <include layout="@layout/line_divider_margin_left" />

        <RelativeLayout
            style="@style/EditTextRl"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/tv_ver_code"
                style="@style/EditTextTv"
                android:paddingRight="14dp"
                android:text="@string/ver_code" />

            <EditText
                android:id="@+id/et_ver_code"
                style="@style/EditTextEt"
                android:layout_toRightOf="@id/tv_ver_code"
                android:hint="@string/ver_code_hint"
                android:inputType="number" />

        </RelativeLayout>

        <include layout="@layout/line_divider_margin_left" />

        <RelativeLayout
            style="@style/EditTextRl"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/tv_new_pswd"
                style="@style/EditTextTv"
                android:paddingRight="14dp"
                android:text="@string/new_pswd" />

            <EditText
                android:id="@+id/et_new_pswd"
                style="@style/EditTextEt"
                android:layout_toRightOf="@id/tv_new_pswd"
                android:hint="@string/forget_pswd_pswd_hint"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
                android:inputType="textPassword"
                android:maxLength="16" />

        </RelativeLayout>

        <include layout="@layout/line_divider_margin_left" />

        <RelativeLayout
            style="@style/EditTextRl"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/tv_ensure_pswd"
                style="@style/EditTextTv"
                android:paddingRight="14dp" />

            <com.egr.drillinghelper.ui.widgets.LvEditText
                android:id="@+id/et_ensure_pswd"
                style="@style/EditTextEt"
                android:imeOptions="actionDone"
                android:layout_toRightOf="@id/tv_ensure_pswd"
                android:hint="@string/ensure_pswd_hint"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
                android:inputType="textPassword"
                android:maxLength="16" />

        </RelativeLayout>

        <include layout="@layout/line_divider" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_complete"
        style="@style/RadiusBtn"
        android:layout_marginTop="30dp"
        android:text="@string/complete" />
</LinearLayout>