<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rg_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_explain"
            style="@style/RbHomeTop"
            android:text="@string/explain" />

        <RadioButton
            android:id="@+id/rb_knows"
            style="@style/RbHomeTop"
            android:text="@string/ask_knowledge" />

        <RadioButton
            android:id="@+id/rb_parts"
            style="@style/RbHomeTop"
            android:text="@string/parts" />
    </RadioGroup>


    <com.egr.drillinghelper.ui.widgets.BanSlideViewPager
        android:id="@+id/vp_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>