<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_primary"
    android:orientation="vertical">

    <include layout="@layout/line_divider" />

    <LinearLayout
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/bg_create_feedback_success"/>
        <TextView
            android:layout_marginTop="15dp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_name"
            android:text="@string/commit_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginBottom="25dp"
            android:text="@string/create_feedback_success_hint"
            android:textColor="@color/tv333"
            android:textSize="@dimen/text_size_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <include layout="@layout/line_divider" />

    <TextView
        android:id="@+id/tv_hint"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:paddingLeft="@dimen/padding_vertical"
        android:textColor="@color/tv666"
        android:textSize="@dimen/text_size_tv"
        android:text="@string/create_feedback_success_hint2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include layout="@layout/line_divider" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_feedback"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>