<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:background="@drawable/bg_white_radius"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:textColor="@color/tv666"
        android:textSize="@dimen/text_size_tv_small" />

    <RelativeLayout
        android:id="@+id/rl_receive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_time"
        android:layout_marginRight="50dp"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_receive_head"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_head" />

        <LinearLayout
            android:layout_toRightOf="@id/iv_receive_head"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_service_msg_receive_text"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="7dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_hint1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_match_hint1"
                android:gravity="center_vertical" />

            <android.support.v7.widget.RecyclerView
                android:layout_marginTop="5dp"
                android:id="@+id/rv_match"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/tv_hint2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_match_hint2"
                android:gravity="center_vertical" />
            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/tv_resolved"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/resolved"
                    android:gravity="center_vertical" />
                <TextView
                    android:layout_marginLeft="20dp"
                    android:id="@+id/tv_unsolved"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/unsolved"
                    android:gravity="center_vertical" />
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>