<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_actionbar"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_head" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_name" />

        <TextView
            android:id="@+id/tv_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_tv" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_contact_us"
            style="@style/LvMy">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_contact_us" />

            <TextView
                style="@style/TvMy"
                android:text="@string/contact_us" />

        </LinearLayout>

        <include layout="@layout/line_divider_margin_left_15dp" />

        <LinearLayout
            android:id="@+id/ll_about_egr"
            style="@style/LvMy">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_about_egr" />

            <TextView
                style="@style/TvMy"
                android:text="@string/about_egr" />

        </LinearLayout>

        <include layout="@layout/line_divider_margin_left_15dp" />

        <LinearLayout
            android:id="@+id/ll_share"
            style="@style/LvMy">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share" />

            <TextView
                style="@style/TvMy"
                android:text="@string/share" />

        </LinearLayout>

        <include layout="@layout/line_divider_margin_left_15dp" />

        <LinearLayout
            android:id="@+id/ll_quit"
            style="@style/LvMy">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_quit" />

            <TextView
                style="@style/TvMy"
                android:text="@string/quit" />

        </LinearLayout>

        <include layout="@layout/line_divider" />
    </LinearLayout>


</LinearLayout>